test: 完成阶段二三项关键任务 - NVD API 配置/k6 cron/变异补强